# sps-benchmarking

./: .gitignore  README.md  Zwischenbericht.md  opcua_benchmark_20251015_165618.json  webapi.py
Standardprotokoll/00_LatexDEF/: DefPackages.tex
Standardprotokoll/01_Main/: Main.fdb_latexmk
benchmark/: .env.example  benchmark_runner.py  main.py  pyproject.toml
benchmark/adapters/: base.py  opcua.py  s7.py  webapi.py
benchmark/results/: benchmark_report.txt  benchmark_results.json  protocol_comparison.txt
benchmark/results/opc_ua/: benchmark_report.txt  benchmark_results.json
benchmark/results/s7/: benchmark_report.txt  benchmark_results.json
benchmark/results/webapi/: benchmark_report.txt  benchmark_results.json
benchmark/results_20260107_162148/: protocol_comparison.txt
benchmark/results_20260107_162148/opc_ua/: benchmark_report.txt  benchmark_results.json
benchmark/results_20260107_162148/s7/: benchmark_report.txt  benchmark_results.json
benchmark/results_20260107_162148/webapi/: benchmark_report.txt  benchmark_results.json
benchmark/results_20260107_170843/: protocol_comparison.txt
benchmark/results_20260107_170843/opc_ua/: benchmark_report.txt  benchmark_results.json
benchmark/results_20260107_170843/s7/: benchmark_report.txt  benchmark_results.json
benchmark/results_20260107_170843/webapi/: benchmark_report.txt  benchmark_results.json
deprecated/: WebAPI.postman_collection.json  opcua-benchtest.py  opcua_benchmark_20251015_163936.json  request.txt  requirements.txt  setup.txt
docs/: Zwischenbericht.md
(+9 files in other folders)
