[project]
name = "sps-benchmarking"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cryptography>=46.0.3",
    "matplotlib>=3.10.7",
    "opcua>=0.98.13",
    "python-dotenv>=1.2.1",
    "python-snap7>=2.0.2",
    "requests>=2.32.5",
    "urllib3>=2.5.0",
]
